--- a/style.css
+++ b/style.css
@@ -1,116 +1,120 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-    background: linear-gradient(rgb(233, 231, 231) 0%,
-            rgb(10, 172, 10) 50%,
-            rgb(241, 238, 238) 100%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
+  overflow-x: hidden;
+  background-color: green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: auto;
 }
 
 .container-galeria {
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 10px;
-    /* height: auto; */
-    height: 80%;
-    width: 50%;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 10px;
+  height: auto;
+  width: 80%;
 }
 
 .box-text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 80px;
 }
 
 .box-text input {
-    width: 50%;
+  width: 50%;
 }
 
 .icone {
-    font-family: 'Poppins', sans-serif;
-    display: flex;
-    gap: 20px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  gap: 20px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .icone h1 {
-    color: green;
+  color: green;
 }
 
 .icone .icon {
-    font-size: 2rem;
-    color: green;
+  font-size: 2rem;
+  color: green;
 }
 
 .icone i {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .input-box {
-    display: flex;
-    gap: 10px;
-    flex-direction: row;
-    position: relative;
-    width: 50%;
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  position: relative;
+  width: 50%;
 }
 
 .input-box button {
-    width: 80px;
-    border-radius: 5px;
-    border-color: green;
-    background-color: white;
-    color: green;
-
+  width: 80px;
+  border-radius: 5px;
+  border-color: green;
+  background-color: white;
+  color: green;
 }
 
 .input-box input {
-    padding-left: 10px;
-    border-radius: 5px;
-    border: 0;
-    height: 25px;
-    width: 100%;
+  padding-left: 10px;
+  border-radius: 5px;
+  border: 0;
+  height: 25px;
+  width: 100%;
 }
 
 .input-box i {
-    position: absolute;
-    left: 80%;
-    top: 50%;
-    transform: translateY(-50%);
-    color: green;
+  position: absolute;
+  left: 80%;
+  top: 50%;
+  transform: translateY(-50%);
+  color: green;
 }
 
 .container-fotos {
-    height: auto;
-    flex-wrap: wrap;
-    width: 100%;
-    padding: 20px 20px 20px 20px;
-    gap: 30px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  padding-block:20px ;
+  /* padding: 20px 20px 20px 20px; */
+  gap: 30px;
 }
-.foto{
-    background-color: rgb(8, 167, 8, 0.6);
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.078);
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    padding-inline: 5px;
-    height: 200px;
-    width: 200px;
+.foto {
+  background-color: rgb(8, 167, 8, 0.6);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.078);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  height: 200px;
+  width: 250px;
 }
-.foto img{
-    height: auto;
-    width: 100%;
-    display: block;
+.foto img {
+  border-radius: 5px;
+  height: 100%;
+  width: 100%;
+  display: block;
 }
