--- a/style.css
+++ b/style.css
@@ -61,20 +61,25 @@ body {
 .icone i {
   padding-bottom: 10px;
 }
-
+.pesquisa {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
 .input-box {
   display: flex;
   gap: 10px;
   flex-direction: row;
   position: relative;
-  width: 50%;
+  width: 80%;
 }
 
-.input-box button {
-  width: 80px;
+.pesquisa button {
   border-radius: 5px;
   border-color: green;
   background-color: white;
+  cursor: pointer;
   color: green;
 }
 
@@ -88,7 +93,7 @@ body {
 
 .input-box i {
   position: absolute;
-  left: 80%;
+  left: 95%;
   top: 50%;
   transform: translateY(-50%);
   color: green;
@@ -99,7 +104,7 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  padding-block:20px ;
+  padding-block: 20px;
   /* padding: 20px 20px 20px 20px; */
   gap: 30px;
 }
