--- a/style.css
+++ b/style.css
@@ -108,6 +108,12 @@ body {
   /* padding: 20px 20px 20px 20px; */
   gap: 30px;
 }
+.container-fotos h2{
+color:green;
+padding-right:5vw;
+font-family: "Poppins", sans-serif;
+
+}
 .foto {
   background-color: rgb(8, 167, 8, 0.6);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.078);
@@ -122,4 +128,10 @@ body {
   height: 100%;
   width: 100%;
   display: block;
+}
+@media(max-width:1080px){
+.input-box i{
+  left:90%;
+}
+
 }
